--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^10.0.0",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0"
   }
 }
